Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11699

lod_device_free()) ASSERTION( atomic_read(&lu->ld_ref) == 0 ) failed: lu is ffff881a7e690000

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0
    • None
    • 3
    • 9223372036854775807

      [597537.289392] LustreError: 14605:0:(lod_dev.c:1692:lod_device_free()) ASSERTION( atomic_read(&lu->ld_ref) == 0 ) failed: lu is ffff881a7e690000
      [597537.289393] LustreError: 14605:0:(lod_dev.c:1692:lod_device_free()) LBUG
      [597537.289393] Pid: 14605, comm: umount
      [597537.289394]
      Call Trace:
      [597537.289406] [<ffffffffc0a697ae>] libcfs_call_trace+0x4e/0x60 [libcfs]
      [597537.289410] [<ffffffffc0a6983c>] lbug_with_loc+0x4c/0xb0 [libcfs]
      [597537.289417] [<ffffffffc14dcfa3>] lod_device_free+0x2c3/0x300 [lod]
      [597537.289436] [<ffffffffc0bc9572>] class_free_dev+0x462/0x670 [obdclass]
      [597537.289446] [<ffffffffc0bc99a0>] class_export_put+0x220/0x2f0 [obdclass]
      [597537.289457] [<ffffffffc0bcb4b5>] class_unlink_export+0x135/0x170 [obdclass]
      [597537.289469] [<ffffffffc0be1550>] class_decref+0x80/0x160 [obdclass]
      [597537.289481] [<ffffffffc0be19b3>] class_detach+0x1b3/0x2e0 [obdclass]
      [597537.289493] [<ffffffffc0be85a7>] class_process_config+0x1987/0x2810 [obdclass]
      [597537.289495] [<ffffffff810c4c8d>] ? ttwu_do_activate.constprop.91+0x5d/0x70
      [597537.289501] [<ffffffffc0a76ef7>] ? libcfs_debug_msg+0x57/0x80 [libcfs]
      [597537.289513] [<ffffffffc0be9610>] class_manual_cleanup+0x1e0/0x710 [obdclass]
      [597537.289516] [<ffffffffc14dc9c6>] lod_obd_disconnect+0x86/0x1b0 [lod]
      [597537.289522] [<ffffffffc15bdd84>] mdd_process_config+0x404/0x650 [mdd]
      [597537.289531] [<ffffffffc13e9292>] mdt_stack_fini+0x2c2/0xd50 [mdt]
      [597537.289536] [<ffffffffc13ea0ab>] mdt_device_fini+0x38b/0x980 [mdt]
      [597537.289549] [<ffffffffc0be622a>] class_cleanup+0x8ea/0xc60 [obdclass]
      [597537.289560] [<ffffffffc0be727c>] class_process_config+0x65c/0x2810 [obdclass]
      [597537.289565] [<ffffffffc0a76ef7>] ? libcfs_debug_msg+0x57/0x80 [libcfs]
      [597537.289580] [<ffffffffc0be95f6>] class_manual_cleanup+0x1c6/0x710 [obdclass]
      [597537.289597] [<ffffffffc0c188ce>] server_put_super+0x8de/0xcd0 [obdclass]
      [597537.289600] [<ffffffff81208085>] generic_shutdown_super+0x75/0x100
      [597537.289601] [<ffffffff81208462>] kill_anon_super+0x12/0x20
      [597537.289616] [<ffffffffc0bec042>] lustre_kill_super+0x32/0x50 [obdclass]
      [597537.289618] [<ffffffff8120881e>] deactivate_locked_super+0x4e/0x70
      [597537.289619] [<ffffffff81208fa6>] deactivate_super+0x46/0x60
      [597537.289621] [<ffffffff8122655f>] cleanup_mnt+0x3f/0x80
      [597537.289622] [<ffffffff812265f2>] __cleanup_mnt+0x12/0x20
      [597537.289624] [<ffffffff810b087b>] task_work_run+0xbb/0xe0
      [597537.289626] [<ffffffff8102ab52>] do_notify_resume+0x92/0xb0
      [597537.289628] [<ffffffff816c1a5d>] int_signal+0x12/0x17
      [597537.289628]
      [597537.289629] Kernel panic - not syncing: LBUG
      [597537.289630] CPU: 4 PID: 14605 Comm: umount Tainted: G OE ------------ 3.10.0-693.21.1.x3.1.9.x86_64 #1
      [597537.289631] Hardware name: Seagate Laguna Seca/Laguna Seca, BIOS v02.0034 09/28/2017
      [597537.289631] Call Trace:
      [597537.289634] [<ffffffff816ae7c8>] dump_stack+0x19/0x1b
      [597537.289635] [<ffffffff816a8634>] panic+0xe8/0x21f
      [597537.289640] [<ffffffffc0a69854>] lbug_with_loc+0x64/0xb0 [libcfs]
      [597537.289645] [<ffffffffc14dcfa3>] lod_device_free+0x2c3/0x300 [lod]
      [597537.289659] [<ffffffffc0bc9572>] class_free_dev+0x462/0x670 [obdclass]
      [597537.289673] [<ffffffffc0bc99a0>] class_export_put+0x220/0x2f0 [obdclass]
      [597537.289688] [<ffffffffc0bcb4b5>] class_unlink_export+0x135/0x170 [obdclass]
      [597537.289703] [<ffffffffc0be1550>] class_decref+0x80/0x160 [obdclass]
      [597537.289718] [<ffffffffc0be19b3>] class_detach+0x1b3/0x2e0 [obdclass]
      [597537.289733] [<ffffffffc0be85a7>] class_process_config+0x1987/0x2810 [obdclass]
      [597537.289735] [<ffffffff810c4c8d>] ? ttwu_do_activate.constprop.91+0x5d/0x70
      [597537.289741] [<ffffffffc0a76ef7>] ? libcfs_debug_msg+0x57/0x80 [libcfs]
      [597537.289756] [<ffffffffc0be9610>] class_manual_cleanup+0x1e0/0x710 [obdclass]
      [597537.289762] [<ffffffffc14dc9c6>] lod_obd_disconnect+0x86/0x1b0 [lod]
      [597537.289766] [<ffffffffc15bdd84>] mdd_process_config+0x404/0x650 [mdd]
      [597537.289774] [<ffffffffc13e9292>] mdt_stack_fini+0x2c2/0xd50 [mdt]
      [597537.289782] [<ffffffffc13ea0ab>] mdt_device_fini+0x38b/0x980 [mdt]
      [597537.289798] [<ffffffffc0be622a>] class_cleanup+0x8ea/0xc60 [obdclass]
      [597537.289813] [<ffffffffc0be727c>] class_process_config+0x65c/0x2810 [obdclass]
      [597537.289820] [<ffffffffc0a76ef7>] ? libcfs_debug_msg+0x57/0x80 [libcfs]
      [597537.289835] [<ffffffffc0be95f6>] class_manual_cleanup+0x1c6/0x710 [obdclass]
      [597537.289868] [<ffffffffc0c188ce>] server_put_super+0x8de/0xcd0 [obdclass]
      [597537.289871] [<ffffffff81208085>] generic_shutdown_super+0x75/0x100
      [597537.289873] [<ffffffff81208462>] kill_anon_super+0x12/0x20
      [597537.289888] [<ffffffffc0bec042>] lustre_kill_super+0x32/0x50 [obdclass]
      [597537.289890] [<ffffffff8120881e>] deactivate_locked_super+0x4e/0x70
      [597537.289892] [<ffffffff81208fa6>] deactivate_super+0x46/0x60
      [597537.289894] [<ffffffff8122655f>] cleanup_mnt+0x3f/0x80
      [597537.289895] [<ffffffff812265f2>] __cleanup_mnt+0x12/0x20
      [597537.289897] [<ffffffff810b087b>] task_work_run+0xbb/0xe0
      [597537.289898] [<ffffffff8102ab52>] do_notify_resume+0x92/0xb0
      [597537.289900] [<ffffffff816c1a5d>] int_signal+0x12/0x17

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: